--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -67,6 +67,16 @@
         </div>
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
+                You can also import an exported collection of dictionaries to migrate from a different device or browser from the <a href="/settings.html#!backup">Backup section of the Settings</a> page.
+
+                <br><br>
+
+                If you are migrating from Yomichan, you may be particularly interested in migrating your data from Yomichan into Yomitan.
+                Please follow instructions from <a href="https://github.com/themoeway/yomitan#migrating-from-yomichan" target="_blank" rel="noopener noreferrer">Yomitan's README</a> for that.
+            </div></div></div>
+        </div>
+        <div class="settings-item">
+            <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                 After dictionaries have been installed, webpage text can be scanned by moving the cursor while holding a modifier key.
                 The default key is <kbd>Shift</kbd>, which can be disabled or configured below.
             </div></div></div>
