Enable background clipboard text monitoring setting crashes the extension
I commented it out.

- A future fix could be running an iframe element constantly in the
background if mv3 doesn't include a better way do implement this

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1927,7 +1927,7 @@
         </div>
     </div>
     <div class="settings-group">
-        <div class="settings-item"><div class="settings-item-inner">
+        <!-- <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-invalid-indicator"></div>
                 <div class="settings-item-label">Enable background clipboard text monitoring</div>
@@ -1936,7 +1936,7 @@
             <div class="settings-item-right">
                 <label class="toggle"><input type="checkbox" class="permissions-toggle" data-permissions-setting="clipboard.enableBackgroundMonitor" data-required-permissions="clipboardRead"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
-        </div></div>
+        </div></div> -->
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-invalid-indicator"></div>
