--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div></div>
-        <div class="settings-item" data-hide-for-manifest-version="3"><div class="settings-item-inner">
+        <div class="settings-item" data-show-for-browser="firefox firefox-mobile"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label"><code>webRequest</code> and <code>webRequestBlocking</code></div>
                 <div class="settings-item-description">
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div></div>
-        <div class="settings-item" data-show-for-manifest-version="3"><div class="settings-item-inner">
+        <div class="settings-item" data-show-for-browser="chrome edge"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label"><code>declarativeNetRequest</code></div>
                 <div class="settings-item-description">
