--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -98,6 +98,20 @@
         </div>
     </div>
 
+    <h2>Recommended Permissions &#40;Important&#41;</h2>
+    <div class="settings-group">
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Enable recommended permissions</div>
+                <div class="settings-item-description">This will allow Yomitan to scan text from most sites. Further configuration is available on the <a href="/permissions.html" rel="noopener">Permissions page</a>.</div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" class="recommended-permissions-toggle" data-origin="&lt;all_urls&gt;"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+            </div>
+            <div id="recommended-permissions-error" class="margin-above danger-text" hidden></div>
+        </div></div>
+    </div>
+
     <h2>Basic customization</h2>
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner">
@@ -422,6 +436,7 @@
 <script src="/js/pages/settings/dictionary-controller.js"></script>
 <script src="/js/pages/settings/dictionary-import-controller.js"></script>
 <script src="/js/pages/settings/generic-setting-controller.js"></script>
+<script src="/js/pages/settings/recommended-permissions-controller.js"></script>
 <script src="/js/pages/settings/modal.js"></script>
 <script src="/js/pages/settings/modal-controller.js"></script>
 <script src="/js/pages/settings/scan-inputs-simple-controller.js"></script>
