--- a/ext/settings.html
+++ b/ext/settings.html
@@ -23,6 +23,7 @@
     <div class="sidebar"><div class="sidebar-inner">
         <div class="sidebar-body">
             <a href="#!profile"          class="button outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="profile"></span></span><span class="outline-item-label">Profile</span></a>
+            <a href="#!language"         class="button outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="translation"></span></span><span class="outline-item-label">Language</span></a>
             <a href="#!dictionaries"     class="button outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="book"></span><span class="outline-item-left-warning-badge no-dictionaries-enabled-warning" hidden><div class="badge warning-badge"><span class="icon" data-icon="exclamation-point-short"></span></div></span></span><span class="outline-item-label">Dictionaries</span></a>
             <a href="#!general"          class="button outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="cog"></span></span><span class="outline-item-label">General</span></a>
             <a href="#!scanning"         class="button outline-item"><span class="outline-item-left"><span class="outline-item-icon icon" data-icon="scanning"></span></span><span class="outline-item-label">Scanning</span></a>
@@ -107,6 +108,31 @@
             </div>
             <div class="settings-item-right open-panel-button-container">
                 <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
+            </div>
+        </div></div>
+    </div>
+
+    <!-- Language -->
+    <div class="heading-container">
+        <div class="heading-container-icon"><span class="icon" data-icon="translation"></span></div>
+        <div class="heading-container-left"><h2 id="language"><a href="#!language">Language</a></h2></div>
+    </div>
+    <div class="settings-group">
+        <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Grammar</div>
+                <div class="settings-item-description">Deinflect using this language's grammar</div>
+            </div>
+            <div class="settings-item-right">
+                <select 
+                    id="language-select"
+                    data-setting="general.language"
+                >
+                    <option value="sq">Albanian</option>
+                    <option value="en">English</option>
+                    <option value="ja">Japanese</option>
+                    <option value="la">Latin</option>
+                </select>
             </div>
         </div></div>
     </div>
