--- a/ext/settings.html
+++ b/ext/settings.html
@@ -130,6 +130,7 @@
                 >
                     <option value="sq">Albanian</option>
                     <option value="en">English</option>
+                    <option value="de">German</option>
                     <option value="ja">Japanese</option>
                     <option value="la">Latin</option>
                 </select>
@@ -1632,7 +1633,7 @@
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
                 <div class="settings-item-label">Decapitalize latin text</div>
-                <div class="settings-item-description" lang="ja">CAPITALIZED TEXT&#x3000;&rarr;&#x3000;capitalized text</div>
+                <div class="settings-item-description" lang="en">CAPITALIZED TEXT&#x3000;&rarr;&#x3000;capitalized text</div>
             </div>
             <div class="settings-item-right">
                 <select data-setting="translation.decapitalize">
