--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1632,7 +1632,7 @@
         </div></div>
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
-                <div class="settings-item-label">Decapitalize latin text</div>
+                <div class="settings-item-label">Decapitalize text</div>
                 <div class="settings-item-description" lang="en">CAPITALIZED TEXT&#x3000;&rarr;&#x3000;capitalized text</div>
             </div>
             <div class="settings-item-right">
