dexie: use blobs obtained from unpkg and update library README

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3855,10 +3855,7 @@
 <!-- Scripts -->
 <script src="/lib/dexie.min.js"></script>
 
-<!-- The linter enforces a lexicographical order for each 'group' of imported scripts as demarked by newline between groups
-     but this extension to dexie must be loaded after the main dexie library, hence breaking it out into its own group.
-     Perhaps The linter could be smarter and ignore 3p libaries for import order. -->
-<script src="/lib/dexie-export-import.min.js"></script>
+<script src="/lib/dexie-export-import.js"></script>
 
 <script src="/lib/wanakana.min.js"></script>
 
