--- a/ext/settings.html
+++ b/ext/settings.html
@@ -133,6 +133,7 @@
                     <option value="de">German</option>
                     <option value="ja">Japanese</option>
                     <option value="la">Latin</option>
+                    <option value="ru">Russian</option>
                 </select>
             </div>
         </div></div>
