--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1644,6 +1644,19 @@
                 </select>
             </div>
         </div></div>
+        <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Capitalize first letter</div>
+                <div class="settings-item-description" lang="ja">lowercase text&#x3000;&rarr;&#x3000;Lowercase text</div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="translation.capitalizeFirstLetter">
+                    <option value="false">Disabled</option>
+                    <option value="true">Enabled</option>
+                    <option value="variant">Use both variants</option>
+                </select>
+            </div>
+        </div></div>
     </div>
 
     <!-- Anki -->
