fit japanese deinflection in new folder structure

--- a/ext/background.html
+++ b/ext/background.html
@@ -52,7 +52,7 @@
 <script src="/js/language/deinflection-ruleset.js"></script>
 <script src="/js/language/languages/japanese/japanese-util.js"></script>
 <script src="/js/language/language-util.js"></script>
-<script src="/js/language/Japanese.js"></script>
+<script src="/js/language/languages/japanese/grammar.js"></script>
 <script src="/js/language/languages/english/grammar.js"></script>
 <script src="/js/language/translator.js"></script>
 <script src="/js/media/audio-downloader.js"></script>
