--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -136,25 +136,25 @@
     </div>
     <table class="kanji-glyph-data"><tbody>
         <tr>
-            <th>Meaning</th>
-            <th>Readings</th>
-            <th>Statistics</th>
+            <th scope="col">Meaning</th>
+            <th scope="col">Readings</th>
+            <th scope="col">Statistics</th>
         </tr>
         <tr>
             <td class="kanji-gloss-container"><ol class="kanji-gloss-list"></ol></td>
             <td class="kanji-readings"><dl class="kanji-readings-chinese"></dl><dl class="kanji-readings-japanese"></dl></td>
             <td class="kanji-statistics"></td>
         </tr>
-        <tr><th colspan="3">Classifications</th></tr>
+        <tr><th scope="col" colspan="3">Classifications</th></tr>
         <tr><td colspan="3" class="kanji-classifications"></td></tr>
-        <tr><th colspan="3">Codepoints</th></tr>
+        <tr><th scope="col" colspan="3">Codepoints</th></tr>
         <tr><td colspan="3" class="kanji-codepoints"></td></tr>
-        <tr><th colspan="3">Dictionary Indices</th></tr>
+        <tr><th scope="col" colspan="3">Dictionary Indices</th></tr>
         <tr><td colspan="3" class="kanji-dictionary-indices"></td></tr>
     </tbody></table>
 </div></template>
 <template id="kanji-info-table-template"><table class="kanji-info-table"><tbody class="kanji-info-table-body"></tbody></table></template>
-<template id="kanji-info-table-item-template"><tr class="kanji-info-table-item"><th class="kanji-info-table-item-header"></th><td class="kanji-info-table-item-value"></td></tr></template>
+<template id="kanji-info-table-item-template"><tr class="kanji-info-table-item"><th scope="col" class="kanji-info-table-item-header"></th><td class="kanji-info-table-item-value"></td></tr></template>
 <template id="kanji-info-table-empty-template"><tr class="kanji-info-table-item kanji-info-table-item-empty"><td class="kanji-info-table-item-value-empty">No data found</td></tr></template>
 <template id="kanji-gloss-item-template"><li class="kanji-gloss-item"><span class="kanji-gloss-content"></span></li></template>
 <!-- [html-validate-disable element-required-ancestor] -->
