--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -25,7 +25,7 @@
         </div>
     </label>
     <div class="nav-button-container">
-        <button class="nav-button action-select-profile" title="Change primary profile" hidden>
+        <button type="button" class="nav-button action-select-profile" title="Change primary profile" hidden>
             <span class="icon" data-icon="profile"></span>
             <span class="profile-select-container"><select class="profile-select" id="profile-select">
                 <optgroup label="Primary Profile" id="profile-select-option-group"></optgroup>
