--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -60,7 +60,7 @@
                         <div class="settings-item-label">Install or remove dictionaries&hellip;</div>
                     </div>
                     <div class="settings-item-right open-panel-button-container">
-                        <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
+                        <button type="button" class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
                     </div>
                 </div></div>
             </div>
@@ -195,7 +195,7 @@
                 <div class="settings-item-label">More customization options are available on the Settings page</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
-                <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
+                <button type="button" class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
             </div>
         </div></a>
     </div>
@@ -231,8 +231,8 @@
         <div class="modal-title">Dictionaries</div>
         <div class="modal-header-button-container">
             <div class="modal-header-button-group">
-                <button class="icon-button modal-header-button" data-modal-action="expand"><span class="icon-button-inner"><span class="icon" data-icon="expand"></span></span></button>
-                <button class="icon-button modal-header-button" data-modal-action="collapse"><span class="icon-button-inner"><span class="icon" data-icon="collapse"></span></span></button>
+                <button type="button" class="icon-button modal-header-button" data-modal-action="expand"><span class="icon-button-inner"><span class="icon" data-icon="expand"></span></span></button>
+                <button type="button" class="icon-button modal-header-button" data-modal-action="collapse"><span class="icon-button-inner"><span class="icon" data-icon="collapse"></span></span></button>
             </div>
         </div>
     </div>
@@ -290,9 +290,9 @@
         <div class="progress-bar-track"><div class="progress-bar"></div></div>
     </div>
     <div class="modal-footer">
-        <button class="low-emphasis danger dictionary-database-mutating-input" id="dictionary-delete-all-button">Delete All</button>
-        <button class="low-emphasis dictionary-database-mutating-input" id="dictionary-import-file-button">Import</button>
-        <button data-modal-action="hide">Close</button>
+        <button type="button" class="low-emphasis danger dictionary-database-mutating-input" id="dictionary-delete-all-button">Delete All</button>
+        <button type="button" class="low-emphasis dictionary-database-mutating-input" id="dictionary-import-file-button">Import</button>
+        <button type="button" data-modal-action="hide">Close</button>
     </div>
 </div></div>
 
@@ -304,8 +304,8 @@
         <p class="danger-text">This action cannot be undone.</p>
     </div>
     <div class="modal-footer">
-        <button class="low-emphasis" data-modal-action="hide">Cancel</button>
-        <button class="danger" data-modal-action="hide" id="dictionary-confirm-delete-button">Delete</button>
+        <button type="button" class="low-emphasis" data-modal-action="hide">Cancel</button>
+        <button type="button" class="danger" data-modal-action="hide" id="dictionary-confirm-delete-button">Delete</button>
     </div>
 </div></div>
 
@@ -316,8 +316,8 @@
         <p class="danger-text">This action cannot be undone.</p>
     </div>
     <div class="modal-footer">
-        <button class="low-emphasis" data-modal-action="hide">Cancel</button>
-        <button class="danger" data-modal-action="hide" id="dictionary-confirm-delete-all-button">Delete</button>
+        <button type="button" class="low-emphasis" data-modal-action="hide">Cancel</button>
+        <button type="button" class="danger" data-modal-action="hide" id="dictionary-confirm-delete-all-button">Delete</button>
     </div>
 </div></div>
 
@@ -355,7 +355,7 @@
         </div></div>
     </div>
     <div class="modal-footer">
-        <button data-modal-action="hide">Close</button>
+        <button type="button" data-modal-action="hide">Close</button>
     </div>
 </div></div>
 
@@ -368,8 +368,8 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="low-emphasis" data-modal-action="hide">Cancel</button>
-        <button data-modal-action="hide" id="dictionary-move-button">Move</button>
+        <button type="button" class="low-emphasis" data-modal-action="hide">Cancel</button>
+        <button type="button" data-modal-action="hide" id="dictionary-move-button">Move</button>
     </div>
 </div></div>
 
@@ -382,15 +382,15 @@
         <span>
             <strong class="dictionary-title"></strong> <span class="light dictionary-version"></span>
         </span>
-        <button class="dictionary-outdated-button" hidden>
+        <button type="button" class="dictionary-outdated-button" hidden>
             <div class="badge warning-badge"><span class="icon" data-icon="exclamation-point-short"></span></div>
         </button>
-        <button class="dictionary-integrity-button" hidden>
+        <button type="button" class="dictionary-integrity-button" hidden>
             <div class="badge info-badge badge-small-icon"><span class="icon" data-icon="checkmark"></span></div>
         </button>
     </div>
     <input type="number" step="1" class="short-height dictionary-priority">
-    <button class="icon-button dictionary-menu-button" data-menu="dictionary-menu" data-menu-position="below left"><span class="icon-button-inner"><span class="icon" data-icon="kebab-menu"></span></span></button>
+    <button type="button" class="icon-button dictionary-menu-button" data-menu="dictionary-menu" data-menu-position="below left"><span class="icon-button-inner"><span class="icon" data-icon="kebab-menu"></span></span></button>
 </template>
 
 <template id="dictionary-details-entry-template"><div class="dictionary-details-entry">
@@ -399,11 +399,11 @@
 </div></template>
 
 <template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
-    <button class="popup-menu-item" data-menu-action="showDetails">Details&hellip;</button>
-    <button class="popup-menu-item" data-menu-action="moveUp">Move up</button>
-    <button class="popup-menu-item" data-menu-action="moveDown">Move down</button>
-    <button class="popup-menu-item" data-menu-action="moveTo">Move to&hellip;</button>
-    <button class="popup-menu-item" data-menu-action="delete">Delete</button>
+    <button type="button" class="popup-menu-item" data-menu-action="showDetails">Details&hellip;</button>
+    <button type="button" class="popup-menu-item" data-menu-action="moveUp">Move up</button>
+    <button type="button" class="popup-menu-item" data-menu-action="moveDown">Move down</button>
+    <button type="button" class="popup-menu-item" data-menu-action="moveTo">Move to&hellip;</button>
+    <button type="button" class="popup-menu-item" data-menu-action="delete">Delete</button>
 </div></div></div></template>
 
 
