--- a/ext/settings.html
+++ b/ext/settings.html
@@ -121,7 +121,7 @@
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
                 <div class="settings-item-label">Grammar</div>
-                <div class="settings-item-description">Deinflect using this language's grammar</div>
+                <div class="settings-item-description">The language you are reading with this profile</div>
             </div>
             <div class="settings-item-right">
                 <select 
@@ -134,6 +134,36 @@
                     <option value="ja">Japanese</option>
                     <option value="ru">Russian</option>
                 </select>
+            </div>
+        </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Deinflection source</div>
+                <div class="settings-item-description" lang="en">
+                    <p>
+                        Deinflect via algorithm or dictionary lookup.
+                    </p>
+                </div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="translation.deinflectionSource">
+                    <option value="algorithm">Algorithm</option>
+                    <option value="dictionary">Dictionary</option>
+                    <option value="both">Both</option>
+                </select>
+            </div>
+        </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Part of speech filtering</div>
+                <div class="settings-item-description" lang="en">
+                    <p>
+                        Filter algorithm deinflections using part of speech tags.
+                    </p>
+                </div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" data-setting="translation.deinflectionPosFilter"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
     </div>
@@ -599,18 +629,6 @@
             </div>
             <div class="settings-item-right">
                 <input type="number" data-setting="scanning.length" min="1" step="1">
-            </div>
-        </div></div>
-        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
-            <div class="settings-item-left">
-                <div class="settings-item-label">Dictionary search resolution</div>
-                <div class="settings-item-description" lang="en"><p>"A dog"&#x3000;&rarr;&#x3000;search for "A dog","A do", "A d", "A"</p> or <p>"A dog"&#x3000;&rarr;&#x3000;"A dog", "A"</p></div>
-            </div>
-            <div class="settings-item-right">
-                <select data-setting="parsing.searchResolution">
-                    <option value="letter">Letter</option>
-                    <option value="word">Word</option>
-                </select>
             </div>
         </div></div>
         <div class="settings-item advanced-only">
@@ -1544,6 +1562,18 @@
         </div>
     </div>
     <div class="settings-group advanced-only" id="text-transformations">
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Dictionary search resolution</div>
+                <div class="settings-item-description" lang="en"><p>"A dog"&#x3000;&rarr;&#x3000;search for "A dog","A do", "A d", "A"</p> or <p>"A dog"&#x3000;&rarr;&#x3000;"A dog", "A"</p></div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="parsing.searchResolution">
+                    <option value="letter">Letter</option>
+                    <option value="word">Word</option>
+                </select>
+            </div>
+        </div></div>
         <div class="settings-item settings-item-button" data-modal-action="show,translation-text-replacement-patterns"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Configure custom text replacement patterns&hellip;</div>
