use Map to allow composed deinflection reasons

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -147,9 +147,9 @@
             </div>
             <div class="settings-item-right">
                 <select data-setting="translation.deinflectionSource">
-                    <option value="algorithm">Algorithm</option>
-                    <option value="dictionary">Dictionary</option>
-                    <option value="both">Both</option>
+                    <option value="algorithm">Algorithm 🧩</option>
+                    <option value="both">Both 📖 🧩</option>
+                    <option value="dictionary">Dictionary 📖</option>
                 </select>
             </div>
         </div></div>
