--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -42,7 +42,7 @@
                 </div></div></div></div>
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                     The <img src="/images/question-mark-circle.svg" class="inline-icon" alt=""> <em>question mark</em> button will open the <a href="/info.html" target="_blank" rel="noopener">Information</a> page,
-                    which has some helpful information and links about Yomichan.
+                    which has some helpful information and links about Yezichak.
                 </div></div></div></div>
             </div>
         </div>
