--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3834,6 +3834,7 @@
 <script src="/js/general/cache-map.js"></script>
 <script src="/js/general/object-property-accessor.js"></script>
 <script src="/js/general/task-accumulator.js"></script>
+<script src="/js/general/helpers.js"></script>
 <script src="/js/input/hotkey-util.js"></script>
 <script src="/js/dictionary/dictionary-importer-media-loader.js"></script>
 <script src="/js/dictionary/dictionary-worker.js"></script>
