fix language setup on first install

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Settings</title>
+    <title>Yezichak Settings</title>
     <link rel="flag.png" sizes="16x16">
     <link rel="flag.png" sizes="19x19">
     <link rel="flag.png" sizes="32x32">
@@ -59,7 +59,7 @@
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
-    <h1>Yomichan Settings</h1>
+    <h1>Yezichak Settings</h1>
 
     <!-- Notifications -->
     <div class="settings-group settings-group-top-margin page-loading-stalled-notification">
@@ -1568,7 +1568,7 @@
                 <div class="settings-item-description" lang="en"><p>"A dog"&#x3000;&rarr;&#x3000;search for "A dog","A do", "A d", "A"</p> or <p>"A dog"&#x3000;&rarr;&#x3000;"A dog", "A"</p></div>
             </div>
             <div class="settings-item-right">
-                <select data-setting="parsing.searchResolution">
+                <select data-setting="translation.searchResolution">
                     <option value="letter">Letter</option>
                     <option value="word">Word</option>
                 </select>
@@ -3425,7 +3425,7 @@
     <div class="modal-header"><div class="modal-title">Reset Settings</div></div>
     <div class="modal-body">
         <p class="danger-text">
-            You are about to reset all Yomichan settings back to their default values.
+            You are about to reset all Yezichak settings back to their default values.
             This will delete all custom profiles you may have created.
             <strong>This action cannot be undone.</strong>
         </p>
