--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -47,24 +47,12 @@
                 </div>
             </div>
         </div></div>
-        <div class="settings-item"><div class="settings-item-inner">
-            <div class="settings-item-left">
-                <div class="settings-item-label"><code>webRequest</code></div>
-                <div class="settings-item-description">
-                    <p>
-                        Yomitan uses this permission to collect audio or create Anki notes using
-                        <a href="https://ankiweb.net/shared/info/2055492159" target="_blank" rel="noopener noreferrer">AnkiConnect</a>.
-                        It is also required to surface error information from failed requests.
-                    </p>
-                </div>
-            </div>
-        </div></div>
         <div class="settings-item" data-show-for-browser="firefox firefox-mobile"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label"><code>webRequestBlocking</code></div>
+                <div class="settings-item-label"><code>webRequest</code> and <code>webRequestBlocking</code></div>
                 <div class="settings-item-description">
                     <p>
-                        Yomitan uses this permission to ensure certain requests have valid and secure headers.
+                        Yomitan uses these permissions to ensure certain requests have valid and secure headers.
                         This sometimes involves removing or changing the <code>Origin</code> request header,
                         as this can be used to fingerprint browser configuration.
                     </p>
