nativeMessaging can always be optional
this is the only blocker to Firefox for Android.

--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -94,9 +94,9 @@
                 <label class="toggle"><input type="checkbox" class="permissions-toggle" data-required-permissions="clipboardRead"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
-        <div class="settings-item"><div class="settings-item-inner">
+        <div class="settings-item" data-hide-for-browser="firefox-mobile"><div class="settings-item-inner">
             <div class="settings-item-left">
-                <div class="settings-item-label"><code>nativeMessaging</code> <span class="light" data-show-for-browser="chrome edge">(optional)</span></div>
+                <div class="settings-item-label"><code>nativeMessaging</code> <span class="light">(optional)</span></div>
                 <div class="settings-item-description">
                     Yomitan has the ability to communicate with an optional native messaging component in order to support
                     parsing large blocks of Japanese text using
