--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1372,7 +1372,7 @@
                 </p>
             </div>
         </div>
-        <div class="settings-item advanced-only">
+        <div class="settings-item advanced-only" data-hide-for-browser="firefox-mobile">
             <div class="settings-item-inner">
                 <div class="settings-item-left">
                     <div class="settings-item-invalid-indicator"></div>
