renaming to Yezichak

--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Welcome to Yomichan!</title>
+    <title>Welcome to Yezichak!</title>
     <link rel="flag.png" sizes="16x16">
     <link rel="flag.png" sizes="19x19">
     <link rel="flag.png" sizes="32x32">
@@ -23,7 +23,7 @@
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
-    <h1>Welcome to Yomichan!</h1>
+    <h1>Welcome to Yezichak!</h1>
 
     <h2>Here are some basics to get started</h2>
     <div class="settings-group">
