renaming to Yezichak

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -193,13 +193,13 @@
                     <div class="settings-item-label">Storage</div>
                     <div class="settings-item-description">
                         <span class="storage-use-invalid">
-                            Yomichan is using an indeterminate amount of storage.
+                            Yezichak is using an indeterminate amount of storage.
                         </span>
                         <span class="storage-use-finite" hidden>
-                            Yomichan is using approximately <span class="storage-usage">?</span> of <span class="storage-quota">?</span>.
+                            Yezichak is using approximately <span class="storage-usage">?</span> of <span class="storage-quota">?</span>.
                         </span>
                         <span class="storage-use-infinite" hidden>
-                            Yomichan is permitted unlimited storage.
+                            Yezichak is permitted unlimited storage.
                         </span>
                     </div>
                 </div>
