--- a/ext/settings.html
+++ b/ext/settings.html
@@ -120,7 +120,7 @@
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
-                <div class="settings-item-label">Grammar</div>
+                <div class="settings-item-label">Language</div>
                 <div class="settings-item-description">The language you are reading with this profile</div>
             </div>
             <div class="settings-item-right">
