try tongue icon

--- a/ext/background.html
+++ b/ext/background.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Background</title>
-    <link rel="flag.png" sizes="16x16">
-    <link rel="flag.png" sizes="19x19">
-    <link rel="flag.png" sizes="32x32">
-    <link rel="flag.png" sizes="38x38">
-    <link rel="flag.png" sizes="48x48">
-    <link rel="flag.png" sizes="64x64">
-    <link rel="flag.png" sizes="128x128">
+    <link rel="tongue.png" sizes="16x16">
+    <link rel="tongue.png" sizes="19x19">
+    <link rel="tongue.png" sizes="32x32">
+    <link rel="tongue.png" sizes="38x38">
+    <link rel="tongue.png" sizes="48x48">
+    <link rel="tongue.png" sizes="64x64">
+    <link rel="tongue.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/background.css">
 </head>
 <body>
