--- a/ext/settings.html
+++ b/ext/settings.html
@@ -130,9 +130,13 @@
                 >
                     <option value="sq">Albanian</option>
                     <option value="en">English</option>
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="hr">Croatian</option>
                     <option value="de">German</option>
                     <option value="ja">Japanese</option>
                     <option value="ru">Russian</option>
+                    <option value="sr">Serbian</option>
                 </select>
             </div>
         </div></div>
