--- a/ext/settings.html
+++ b/ext/settings.html
@@ -134,6 +134,7 @@
                     <option value="fr">French</option>
                     <option value="de">German</option>
                     <option value="ja">Japanese</option>
+                    <option value="pt">Portuguese</option>
                     <option value="ru">Russian</option>
                     <option value="sh">Serbo-Croatian</option>
                 </select>
