--- a/ext/settings.html
+++ b/ext/settings.html
@@ -129,6 +129,7 @@
                     data-setting="general.language"
                 >
                     <option value="sq">Albanian</option>
+                    <option value="el">Greek</option>
                     <option value="en">English</option>
                     <option value="es">Spanish</option>
                     <option value="fr">French</option>
