--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2416,7 +2416,7 @@
 
         <div class="warning-text margin-above no-dictionaries-installed-warning" hidden>
             No dictionaries have been installed yet.
-            Visit the <a href="https://foosoft.net/projects/yomichan/#dictionaries" target="_blank" rel="noopener noreferrer">Yomichan homepage</a>
+            Visit the <a href="https://discord.gg/kd4YXFaV" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>
             for a list free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
         </div>
         <div id="dictionary-error" class="danger-text margin-above" hidden></div>
