--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -29,7 +29,7 @@
     <div class="settings-group">
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                Clicking the <img src="/images/yomichan-icon.svg" class="inline-icon" alt=""> <em>Yomichan</em> button in the browser bar will open the quick-actions popup.
+                Clicking the <img src="/images/yezichak-icon.svg" class="inline-icon" alt=""> <em>Yezichak</em> button in the browser bar will open the quick-actions popup.
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
@@ -48,8 +48,8 @@
         </div>
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                Yomichan requires one or more dictionaries to be installed in order to look up terms, kanji, and other information.
-                Several downloadable dictionaries can be found on the <a href="https://foosoft.net/projects/yomichan/#dictionaries" target="_blank" rel="noopener noreferrer">Yomichan homepage</a>,
+                Yezichak requires one or more dictionaries to be installed in order to look up terms, kanji, and other information.
+                Several downloadable dictionaries can be found on the <a href="https://discord.gg/kd4YXFaV" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>,
                 allowing you to choose the dictionaries most relevant for you.
                 Dictionaries can be configured using the button below,
                 or later from the the <a href="/settings.html" rel="noopener">Settings</a> page.
@@ -74,10 +74,6 @@
                 <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                     Clicking the <img src="/images/play-audio.svg" class="inline-icon" alt=""> <em>speaker</em> button of an entry in the search results
                     will play an audio clip of a term's pronunciation using an online dictionary, if available.
-                </div></div></div></div>
-                <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                    Clicking on a kanji character in a term's definition will show additional information about that character.
-                    <span class="light">(Requires a kanji dictionary to be installed.)</span>
                 </div></div></div></div>
             </div>
         </div>
@@ -243,7 +239,7 @@
 
         <div class="warning-text margin-above no-dictionaries-installed-warning" hidden>
             No dictionaries have been installed yet.
-            Visit the <a href="https://foosoft.net/projects/yomichan/#dictionaries" target="_blank" rel="noopener noreferrer">Yomichan homepage</a>
+            Visit the <a href="https://discord.gg/kd4YXFaV" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>
             for a list of free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
         </div>
         <div id="dictionary-error" class="danger-text margin-above" hidden></div>
