💬 update discord invite

--- a/ext/info.html
+++ b/ext/info.html
@@ -45,7 +45,7 @@
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
             <ul>
-                <li>Support and downloadable dictionaries: <a href="https://discord.gg/kd4YXFaV" rel="noreferrer noopener">Discord</a></li>
+                <li>Support and downloadable dictionaries: <a href="https://discord.gg/WuqdTDQWd" rel="noreferrer noopener">Discord</a></li>
                 <li>Information and source code: <a href="https://github.com/StefanVukovic99/yezichak" rel="noreferrer noopener">Github</a></li>
                 <!-- <li>Release notes: <a href="https://github.com/FooSoft/yomichan/releases" rel="noreferrer noopener" data-href-format="https://github.com/FooSoft/yomichan/releases/tag/{version}" id="release-notes-this-version-link">This version</a> | <a href="https://github.com/FooSoft/yomichan/releases" rel="noreferrer noopener">All versions</a></li> -->
                 <li>More extension information: <a href="/permissions.html">Permissions</a> | <a href="/legal.html">Licenses</a> | <a href="/issues.html">Issues</a></li>
