--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -49,7 +49,7 @@
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                 Yezichak requires one or more dictionaries to be installed in order to look up terms, kanji, and other information.
-                Several downloadable dictionaries can be found on the <a href="https://discord.gg/kd4YXFaV" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>,
+                Several downloadable dictionaries can be found on the <a href="https://discord.gg/WuqdTDQWd" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>,
                 allowing you to choose the dictionaries most relevant for you.
                 Dictionaries can be configured using the button below,
                 or later from the the <a href="/settings.html" rel="noopener">Settings</a> page.
@@ -239,7 +239,7 @@
 
         <div class="warning-text margin-above no-dictionaries-installed-warning" hidden>
             No dictionaries have been installed yet.
-            Visit the <a href="https://discord.gg/kd4YXFaV" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>
+            Visit the <a href="https://discord.gg/WuqdTDQWd" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>
             for a list of free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
         </div>
         <div id="dictionary-error" class="danger-text margin-above" hidden></div>
